# midi-simple

./: README.rst  midi-simple.cabal
bench/: Bench.hs
example/: MidiDump.hs  Reencode.hs
src/Sound/: MIDI.hs
src/Sound/MIDI/: Controllers.hs  Parser.hs  Serialize.hs  Types.hs
test/: Test.hs
