name:                midi-simple
version:             0.1.0.0
synopsis:			 A simple and fast library for working with MIDI messages
description:         Please see README.rst
homepage:            https://github.com/tsahyt/midi-simple#readme
license:             LGPL-3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2017 Paul Ogris
category:            Sound
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:
                       Sound.MIDI.Types
                       Sound.MIDI.Parser
  build-depends:       base >= 4.7 && < 5,
                       attoparsec,
                       bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tsahyt/midi-simple
