name:                midi-simple
version:             0.1.0.0
synopsis:			 A simple and fast library for working with MIDI messages
description:         Please see README.rst
homepage:            https://github.com/tsahyt/midi-simple#readme
license:             LGPL-3
license-file:        LICENSE
author:              Paul Ogris
maintainer:          paul@tsahyt.com
copyright:           2017 Paul Ogris
category:            Sound
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

flag examples
  description:       Build examples
  default:           False

library
  hs-source-dirs:      src
  ghc-options:         -Wall -O2
  exposed-modules:     Sound.MIDI
                       Sound.MIDI.Types
                       Sound.MIDI.Parser
                       Sound.MIDI.Serialize
                       Sound.MIDI.Controllers
  build-depends:       base >= 4.7 && < 5,
                       attoparsec,
                       bytestring
  default-language:    Haskell2010

executable midi-dump
  if flag(examples)
      build-depends:   base >= 4.7 && < 5, midi-simple, pipes, 
                       pipes-bytestring, pipes-attoparsec
  else
      buildable:       False
  hs-source-dirs:      example
  ghc-options:         -Wall
  main-is:             MidiDump.hs
  default-language:    Haskell2010

test-suite midi-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4.7 && < 5, midi-simple, tasty, tasty-hspec,
                       tasty-quickcheck, QuickCheck, generic-random, bytestring,
                       hspec-attoparsec, hspec, attoparsec

benchmark midi-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5, midi-simple, criterion, bytestring

source-repository head
  type:     git
  location: https://github.com/tsahyt/midi-simple
